Cleanup: work around clang-format differences between versions

Ref T73747