intern/ghost/intern/GHOST_ContextCGL.mm
@@ -34,7 +34,9 @@
 
 static void ghost_fatal_error_dialog(const char *msg)
 {
+  /* clang-format off */
   @autoreleasepool {
+    /* clang-format on */
     NSString *message = [NSString stringWithFormat:@"Error opening window:\n%s", msg];
 
     NSAlert *alert = [[NSAlert alloc] init];
@@ -335,7 +337,9 @@ static const OSType METAL_CORE_VIDEO_PIXEL_FORMAT = kCVPixelFormatType_32BGRA;
 
 void GHOST_ContextCGL::metalInit()
 {
+  /* clang-format off */
   @autoreleasepool {
+    /* clang-format on */
     id<MTLDevice> device = m_metalLayer.device;
 
     // Create a command queue for blit/present operation
@@ -530,7 +534,9 @@ void GHOST_ContextCGL::metalUpdateFramebuffer()
 
 void GHOST_ContextCGL::metalSwapBuffers()
 {
+  /* clang-format off */
   @autoreleasepool {
+    /* clang-format on */
     updateDrawingContext();
     glFlush();
 
