source/blender/editors/screen/area.c
@@ -2943,7 +2943,8 @@ void ED_region_info_draw(ARegion *ar,
                          float fill_color[4],
                          const bool full_redraw)
 {
-  ED_region_info_draw_multiline(ar, (const char * [2]){text, NULL}, fill_color, full_redraw);
+  const char *text_array[2] = {text, NULL};
+  ED_region_info_draw_multiline(ar, text_array, fill_color, full_redraw);
 }
 
 #define MAX_METADATA_STR 1024
